--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider dumi dev",
+    "enter:beta": "changeset pre enter beta",
+    "exit:beta": "changeset pre exit",
+    "tsc": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
