refactor: deleted zbanx

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "dumi dev",
     "enter:beta": "changeset pre enter beta",
     "exit:beta": "changeset pre exit",
-    "tsc": "tsc --noEmit"
+    "tsc": "tsc --noEmit",
+    "eslint:js": "eslint --ext .js,.jsx,.ts,.tsx"
   },
   "keywords": [],
   "author": "",
@@ -36,9 +37,13 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^2.51.6",
     "dumi": "^2.2.0",
     "father": "^4.2.0",
+    "postcss": "^8.4.23",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.2"
   }
 }
