--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,9 +19,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.12.0"
-  },
-  "devDependencies": {
+    "@babel/runtime": "^7.12.0",
+    "classnames": "^2.3.2"
   },
   "peerDependencies": {
     "@types/react": ">=18.0.0",
@@ -29,7 +28,12 @@
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   },
-  "keywords": ["desing", "ui", "component", "react"],
+  "keywords": [
+    "desing",
+    "ui",
+    "component",
+    "react"
+  ],
   "author": "",
   "license": "ISC"
 }
