--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "paths": {
       "@@/*": [".dumi/tmp/*"],
       "@design/ui": ["./packages/ui/src/index.ts"],
-      "@design/utils": ["./packages/utils/src/index.ts"]
+      "@design/utils": ["./packages/utils/src/index.ts"],
+      "@design/provider": ["./packages/provider/src/index.ts"]
     },
     "plugins": [{ "transform": "typescript-transform-paths", "afterDeclarations": true }]
   }
