--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
       "@@/*": [".dumi/tmp/*"],
       "@design/ui": ["./packages/ui/src/index.ts"],
       "@design/utils": ["./packages/utils/src/index.ts"],
+      "@design/hooks": ["./packages/hooks/src/index.ts"],
       "@design/provider": ["./packages/provider/src/index.ts"]
     },
     "plugins": [{ "transform": "typescript-transform-paths", "afterDeclarations": true }]
