--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.0",
+    "class-variance-authority": "^0.6.0",
     "classnames": "^2.3.2"
   },
   "peerDependencies": {
