--- a/package.json
+++ b/package.json
@@ -33,17 +33,21 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@umijs/fabric": "^2.14.1",
+    "@umijs/plugins": "^4.0.69",
     "husky": "^8.0.3",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "tailwindcss": "^3"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "class-variance-authority": "^0.6.0",
     "daisyui": "^2.51.6",
     "dumi": "^2.2.0",
     "father": "^4.2.0",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "umi": "^4.0.69"
   }
 }
