--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@babel/runtime": "^7.12.0",
     "class-variance-authority": "^0.6.0",
-    "classnames": "^2.3.2"
+    "classnames": "^2.3.2",
+    "tailwind-merge": "^1.12.0"
   },
   "peerDependencies": {
     "@types/react": ">=18.0.0",
