--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.0",
-    "lodash": "^4.17.21"
+    "clsx": "^1.2.1",
+    "lodash": "^4.17.21",
+    "tailwind-merge": "^1.12.0"
   },
   "keywords": [],
   "author": "",
