--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "@umijs/fabric": "^2.14.1",
     "@umijs/plugins": "^4.0.69",
     "husky": "^8.0.3",
+    "tailwindcss": "^3",
     "typescript": "^5.0.4",
-    "tailwindcss": "^3"
+    "vitest": "^0.31.1"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
