feat: add hooks

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "design-components",
+  "name": "light-components",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
