--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@design/provider",
+  "name": "@light/provider",
   "version": "1.0.0",
   "description": "",
   "main": "es/index.js",
