--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@desing/ui",
+  "name": "@light/ui",
   "version": "1.0.0",
   "homepage": "",
   "main": "es/index.js",
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.0",
+    "@light/hooks": "workspace:^*",
+    "@light/utils": "workspace:^*",
     "class-variance-authority": "^0.6.0",
     "classnames": "^2.3.2",
     "tailwind-merge": "^1.12.0"
